[package]
name = "xkcdwat"
description = "A wrapper around the xkcd feed to display the alt text in the "
version = "0.1.0"
edition = "2021"
rust-version = "1.82"

[[bin]]
name = "xkcdwat"
path = "src/main.rs"

[dependencies]
axum = "0.8"
axum-extra = "0.12"
color-eyre = "0.6"
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
